# code-review-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TROUBLESHOOTING.md  WEBHOOK_SETUP.md  docker-compose.yml  dummy_prd.md  main.py  pyproject.toml  test_real_analysis.py
app/: main.py
app/api/: endpoints.py  webhook_endpoints.py
app/core/: celery_app.py
app/models/: schemas.py  webhook_schemas.py
app/services/: analysis_service.py  github_service.py  llm_service.py  task_service.py  webhook_service.py
app/tasks/: analysis_tasks.py
app/tests/: test_analysis_integration.py  test_api.py  test_celery_tasks.py  test_llm_service.py  test_webhooks.py
